# fast-folder

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
scripts/: build.bat  dev-setup.ps1  ff.ps1
src/: cli.py  handoff.py  installer.py  storage.py
